--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-DATABASE_URI=mongodb+srv://mhasnanr18:insteadofmongoose55@scheduler.eztzpku.mongodb.net/
+DATABASE_URI=mongodb+srv://mhasnanr18:insteadofmongoose55@scheduler.eztzpku.mongodb.net/FinancialTracker
